# sim_ws

install/: local_setup.sh  setup.sh
install/commutils/share/commutils/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/commutils/share/commutils/cmake/: commutilsTargets.cmake
install/legarm_wbc/share/legarm_wbc/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mjcsim/share/mjcsim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: 纠错记录
src/commutils/: CMakeLists.txt  Config.cmake.in  README.md
src/legarm_wbc/: CMakeLists.txt  Config.cmake.in  LICENSE  readme.md
src/legarm_wbc/configs/: b2z1_standing.yaml
src/legarm_wbc/demos/: demo_b2z1_standing.py  demo_b2z1_switsh.py  test.py
src/legarm_wbc/models/: b2z1.urdf
src/legarm_wbc/models/b2z1/: b2z1.xml  b2z1_grasp.xml
src/legarm_wbc/models/meshes/: FL_hip.stl  FL_thigh.stl  FR_hip.stl  RL_calf.stl  RL_hip.stl  RR_hip.stl  RR_thigh.stl
src/legarm_wbc/python/legarm_wbc/: geometry.py  hqp_data.py  robot_wrapper.py  whole_body_controller.py
src/mjcsim/: LICENSE  readme.md  setup.cfg  setup.py
src/mjcsim/configs/: b2z1_grasp_standing.yaml  b2z1_standing.yaml
src/mjcsim/demos/: demo_b2z1_standing.py  test.py
src/mjcsim/models/b2z1/: b2z1.xml  b2z1_grasp.xml
src/mjcsim/models/meshes_mujoco/: FR_thigh.stl  RL_thigh.stl
